{
  "version": 4,
  "terraform_version": "1.13.1",
  "serial": 630,
  "lineage": "c510b7ad-5363-36a3-edef-2dc305d18f29",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c1bd05866264eafb",
            "arn": "arn:aws:ec2:eu-central-1:346430705414:elastic-ip/eipalloc-0c1bd05866264eafb",
            "domain": "vpc",
            "id": "eipalloc-0c1bd05866264eafb",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-3-78-120-31.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.78.120.31",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Env": "dev",
              "Name": "cs3-nat-eip",
              "Project": "CS3"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "cs3-nat-eip",
              "Project": "CS3"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:346430705414:internet-gateway/igw-0161afa0d2382fd61",
            "id": "igw-0161afa0d2382fd61",
            "owner_id": "346430705414",
            "tags": {
              "Env": "dev",
              "Name": "cs3-igw",
              "Project": "CS3"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "cs3-igw",
              "Project": "CS3"
            },
            "vpc_id": "vpc-08dcb7f571c30af89"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "portal_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:346430705414:loadbalancer/app/cs3-portal-alb/e7d3bcea0414062c",
            "arn_suffix": "app/cs3-portal-alb/e7d3bcea0414062c",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "cs3-portal-alb-924546000.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:346430705414:loadbalancer/app/cs3-portal-alb/e7d3bcea0414062c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "cs3-portal-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-098297a8b162a5b3c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-09f35ede55cfe29b0"
              },
              {
                "subnet_id": "subnet-0e0a77decf530e004"
              }
            ],
            "subnets": [
              "subnet-09f35ede55cfe29b0",
              "subnet-0e0a77decf530e004"
            ],
            "tags": {
              "Env": "dev",
              "Name": "cs3-portal-alb",
              "Project": "CS3"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "cs3-portal-alb",
              "Project": "CS3"
            },
            "vpc_id": "vpc-08dcb7f571c30af89",
            "xff_header_processing_mode": "append",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:346430705414:listener/app/cs3-portal-alb/e7d3bcea0414062c/a99d785838dac972",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:346430705414:targetgroup/cs3-portal-tg/9995e0e8835adf81",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:346430705414:listener/app/cs3-portal-alb/e7d3bcea0414062c/a99d785838dac972",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:346430705414:loadbalancer/app/cs3-portal-alb/e7d3bcea0414062c",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.portal_alb",
            "aws_lb_target_group.portal_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "portal_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:346430705414:targetgroup/cs3-portal-tg/9995e0e8835adf81",
            "arn_suffix": "targetgroup/cs3-portal-tg/9995e0e8835adf81",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:346430705414:targetgroup/cs3-portal-tg/9995e0e8835adf81",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-central-1:346430705414:loadbalancer/app/cs3-portal-alb/e7d3bcea0414062c"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "cs3-portal-tg",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Env": "dev",
              "Project": "CS3"
            },
            "tags_all": {
              "Env": "dev",
              "Project": "CS3"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-08dcb7f571c30af89"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c1bd05866264eafb",
            "association_id": "eipassoc-0fd6f50c7217ad497",
            "connectivity_type": "public",
            "id": "nat-03d48365eeb6e7f46",
            "network_interface_id": "eni-042cbefe3de416bbb",
            "private_ip": "10.0.1.150",
            "public_ip": "3.78.120.31",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09f35ede55cfe29b0",
            "tags": {
              "Env": "dev",
              "Name": "cs3-nat",
              "Project": "CS3"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "cs3-nat",
              "Project": "CS3"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:346430705414:route-table/rtb-0ac7d7d2fb37e00af",
            "id": "rtb-0ac7d7d2fb37e00af",
            "owner_id": "346430705414",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03d48365eeb6e7f46",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "dev",
              "Name": "cs3-private-rt",
              "Project": "CS3"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "cs3-private-rt",
              "Project": "CS3"
            },
            "timeouts": null,
            "vpc_id": "vpc-08dcb7f571c30af89"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:346430705414:route-table/rtb-0c7e57bdebf305aac",
            "id": "rtb-0c7e57bdebf305aac",
            "owner_id": "346430705414",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0161afa0d2382fd61",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "dev",
              "Name": "cs3-public-rt",
              "Project": "CS3"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "cs3-public-rt",
              "Project": "CS3"
            },
            "timeouts": null,
            "vpc_id": "vpc-08dcb7f571c30af89"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c3ecbb072ad8026a",
            "route_table_id": "rtb-0ac7d7d2fb37e00af",
            "subnet_id": "subnet-0da595898b97dc850"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_a",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04efd38148af3c5f1",
            "route_table_id": "rtb-0ac7d7d2fb37e00af",
            "subnet_id": "subnet-0116c68d6dca10290"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_b",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a79566fa8d3cd756",
            "route_table_id": "rtb-0c7e57bdebf305aac",
            "subnet_id": "subnet-09f35ede55cfe29b0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08ec5949e0ec9d6f2",
            "route_table_id": "rtb-0c7e57bdebf305aac",
            "subnet_id": "subnet-0e0a77decf530e004"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:346430705414:security-group/sg-098297a8b162a5b3c",
            "description": "Allow HTTP/HTTPS from internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-098297a8b162a5b3c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "cs3-alb-sg",
            "name_prefix": "",
            "owner_id": "346430705414",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev",
              "Name": "cs3-alb-sg",
              "Project": "CS3"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "cs3-alb-sg",
              "Project": "CS3"
            },
            "timeouts": null,
            "vpc_id": "vpc-08dcb7f571c30af89"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_service_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:346430705414:security-group/sg-080f8a404554989cf",
            "description": "ECS service security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-080f8a404554989cf",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow ALB to reach ECS",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-098297a8b162a5b3c"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "cs3-ecs-sg",
            "name_prefix": "",
            "owner_id": "346430705414",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev",
              "Name": "cs3-ecs-sg",
              "Project": "CS3"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "cs3-ecs-sg",
              "Project": "CS3"
            },
            "timeouts": null,
            "vpc_id": "vpc-08dcb7f571c30af89"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:346430705414:security-group/sg-0df09ad3b014a767c",
            "description": "Security group for Lambda functions",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0df09ad3b014a767c",
            "ingress": [],
            "name": "cs3-lambda-sg",
            "name_prefix": "",
            "owner_id": "346430705414",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev",
              "Name": "cs3-lambda-sg",
              "Project": "CS3"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "cs3-lambda-sg",
              "Project": "CS3"
            },
            "timeouts": null,
            "vpc_id": "vpc-08dcb7f571c30af89"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:346430705414:security-group/sg-0ad9e7a71e2e16679",
            "description": "Allow DB access from ECS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ad9e7a71e2e16679",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "cs3-rds-sg",
            "name_prefix": "",
            "owner_id": "346430705414",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev",
              "Name": "cs3-rds-sg",
              "Project": "CS3"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "cs3-rds-sg",
              "Project": "CS3"
            },
            "timeouts": null,
            "vpc_id": "vpc-08dcb7f571c30af89"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ecs_to_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-4270965618",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ad9e7a71e2e16679",
            "security_group_rule_id": "sgr-07a90c15424183164",
            "self": false,
            "source_security_group_id": "sg-080f8a404554989cf",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.ecs_service_sg",
            "aws_security_group.rds_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lambda_to_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-3440646029",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ad9e7a71e2e16679",
            "security_group_rule_id": "sgr-00e1d282170fd0aea",
            "self": false,
            "source_security_group_id": "sg-0df09ad3b014a767c",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.lambda_sg",
            "aws_security_group.rds_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:346430705414:subnet/subnet-0da595898b97dc850",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0da595898b97dc850",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "346430705414",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "cs3-private-a",
              "Project": "CS3"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "cs3-private-a",
              "Project": "CS3"
            },
            "vpc_id": "vpc-08dcb7f571c30af89"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:346430705414:subnet/subnet-0116c68d6dca10290",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0116c68d6dca10290",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "346430705414",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "cs3-private-b",
              "Project": "CS3"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "cs3-private-b",
              "Project": "CS3"
            },
            "vpc_id": "vpc-08dcb7f571c30af89"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:346430705414:subnet/subnet-09f35ede55cfe29b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09f35ede55cfe29b0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "346430705414",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "cs3-public-a",
              "Project": "CS3"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "cs3-public-a",
              "Project": "CS3"
            },
            "vpc_id": "vpc-08dcb7f571c30af89"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:346430705414:subnet/subnet-0e0a77decf530e004",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e0a77decf530e004",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "346430705414",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "cs3-public-b",
              "Project": "CS3"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "cs3-public-b",
              "Project": "CS3"
            },
            "vpc_id": "vpc-08dcb7f571c30af89"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:346430705414:vpc/vpc-08dcb7f571c30af89",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0757d1ceb317d292f",
            "default_route_table_id": "rtb-0e62bc10267eddcef",
            "default_security_group_id": "sg-0a7fdd00b9796e08d",
            "dhcp_options_id": "dopt-04a535f19f1f0fd1e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08dcb7f571c30af89",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e62bc10267eddcef",
            "owner_id": "346430705414",
            "tags": {
              "Env": "dev",
              "Name": "cs3-vpc",
              "Project": "CS3"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "cs3-vpc",
              "Project": "CS3"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}